	  common configurations and in configs/*/README.txt for board and MCU_
	  specific configurations.
	* configs/stm3240g-eval: Add USB host support.
	* sched/os_bring.c, configs/*/defconfig, tools/mkconfig.c, and others:  Added
	  configuration variable CONFIG_USER_ENTRYPOINT that may be used to change
	  the default entry from user_start to some other symbol.  Contributed by
	  Kate. NOTE: This change does introduce a minor backward incompatibility.
	  For example, if your application uses NSH as its start-up program, then your
	  code will not fail because it will be unable to find "user_start".  The fix
	  for this link failure is to add the following to your configuration file:
	  CONFIG_USER_ENTRYPOINT="nsh_main".
	* libs/stdio/lib_libfread.c and lib_*flush*.c:  Correct a couple of
	  error cases where the lib semaphore was not be released on error
	  exits (thanks Ronen Vainish).  Also, improved some error reporting:
	  the generic ERROR was being used instead of the specific errno
	  value; the errno variable was not always set correctly.
	* tools/mkfsdata.pl: The uIP web server CGI image making perl script was
	  moved from apps/netutils/webserver/makefsdata to nuttx/tools/mkfsdata.pl
	  (Part of a larger change submitted by Max Holtzberg).
	* configs/stm3240g-eval/script/ld.script:  All of the identical ld.script
	  files for the STM3240G-EVAL were replaced by one version in this directory.
	* configs/stm3240g-eval/webserver:  Configuration submitted by Max Holtzberg
	  for testing the changes to the uIP web server (see apps/ChangeLog.txt).
	* lib/stdio/lib_perror.c:  Remove CONFIG_LIBC_PERROR_DEVNAME.  What was I
	  thinking?  Arbitrary streams cannot be shared by different tasks.
	* tools/mksyscall.c, csvparser.c, and csvparser.h: Separate CSV parsing
	  logic from mksyscall.c into files where it can be shared.
	* tools/mksymtab.c:  Add a tool that can be used to convert a CSV file
	  into a NuttX-style symbol table.